# enterprise_ai

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  STRATEGY.md  USER_MANUAL.md  agent_bundle_integrity_checklist.md  demo_scenario_01_complete.md  demo_scenario_02_safe_escalation.md  llm-agent-testing-procedure.md  llm_agent_output_evaluation_checklist.md  llm_call_layer_prompt.md  llm_call_layer_testing_prompt.md  master_log.md  necessary_fixes.md  orchestration_layer_build_prompt.md  per_agent_test_environment_prompt.md  pyproject.toml  scenario_10__procurement_agent__build_prompt.md  scenario_11__checklist_assembler__build_prompt.md  scenario_13__procurement_agent__build_prompt.md  scenario_14__it_security_agent__build_prompt.md  scenario_3_legal_agent_build_prompt.md  scenario_4_legal_agent_build_prompt.md  scenario_5_legal_agent_build_prompt.md  scenario_6_legal_agent_build_prompt.md  scenario_7__procurement_agent__build_prompt.md  scenario_8__procurement_agent__build_prompt.md  test_results.md
agent_spec_docs/: Agent_Spec_Version_Log.md  Checklist_Assembler_Spec.md  Checkoff_Agent_Spec.md  IT_Security_Agent_Spec.md  Legal_Agent_Spec.md  Procurement_Agent_Spec.md
core_documents/: ContextContract_CC001_v1_4.docx  ContextContract_CC001_v2.docx  DesignDoc_v0_3.docx  DesignDoc_v4.docx  PRD_v0.2.docx  PRD_v0_3.docx  context_contract.md  design_doc.md  supervisor_orchestration_plan.md
mock_documents/: DPA_Legal_Trigger_Matrix_v1_3.xlsx  OptiChain_Procurement_Classification_Memo_scenario01.csv  OptiChain_VSQ_001_v2_1.json  Procurement_Approval_Matrix_v2_0.xlsx  Slack_Thread_Export_001.json  Vendor_Precedent_Log_v1_1.json
per_agent_test_env/: README.md  __init__.py  bundle_loader.py  cli.py  evaluators.py  reporter.py  runner.py
planning/: general_project_structure.md
prompts_chunking_embedding_indexing/: build_index_registry.md  storage_indexing_strategy.md
prompts_orchestration_layer/: agent_bundle_integrity_checklist.md  deterministic_orchestration_test_harness_prompt.md  orchestration_layer_build_prompt.md
results/: full_pipeline_test_results.md  test_results.md
scenario_1_mock_documents/: OptiChain_VSQ_001_v2_1_scenario01.json  (+1 more)
scripts/: scenarios.py  (+11 more)
(+702 files in other folders)
