[project]
name = "enterprise-ai"
version = "0.1.0"
description = "Governed preprocessing and retrieval pipeline demo."
requires-python = ">=3.12"
dependencies = [
    "pypdf>=6.9.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
