[project]
name = "enterprise-ai"
version = "0.1.0"
description = "Governed preprocessing and retrieval pipeline demo."
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "numpy<2",
    "onnxruntime<1.24",
    "pypdf>=6.9.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers==3.0.1",
    "torch<2.3",
    "transformers==4.41.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
