[project]
name = "enterprise-ai"
version = "0.1.0"
description = "Governed preprocessing and retrieval pipeline demo."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.95.0",
    "chromadb>=1.5.7",
    "numpy<2",
    "onnxruntime<1.24",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers==3.0.1",
    "torch<2.3",
    "transformers==4.41.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "api: tests that hit the real Anthropic API (skipped unless -m api is passed)",
    "scenario_1: clean governed-completion scenario expectations",
    "scenario_2: escalated/regulated scenario expectations",
    "scenario_blocked_demo: STEP-04 BLOCKED on missing procurement matrix",
    "scenario_escalated_step4_demo: STEP-04 ESCALATED on no matching PAM-001 row",
    "layer_unit: per-agent unit tests (Layer 1)",
    "layer_handoff: cross-agent handoff tests (Layer 2)",
    "layer_acceptance: acceptance-check tests (Layer 3)",
    "full_pipeline: end-to-end pipeline runs across all six steps",
]
addopts = "-ra --strict-markers"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
